fix:contrast increase

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,5 +1,5 @@
 *{
-  color:#1668dc;
+  color:#78a8ec;
   background-color: #111a2c;
 }
 
